# backoffice/src/api/index.ts
@@ -4,4 +4,6 @@ export { permissionsAPI } from "./permissions";
 export { freightAPI } from "./freight";
 export { ordersAPI } from "./orders";
 export { landingAPI } from "./landing";
+export { productsAPI } from "./products";
+export { pageContentsAPI } from "./pageContents";
 export { default as client } from "./client";
